--- a/style.css
+++ b/style.css
@@ -60,6 +60,27 @@
   cursor: pointer;
 }
 
+.events-title {
+  text-align: center;
+  font-size: 4vmin;
+  color: var(--thirdy-color);
+  margin-top: 50px;
+}
+.events-row {
+  margin-top: 50px;
+}
+.events-row-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.events-row-col img {
+  width: 80%;
+}
+.events-row-col .btn {
+  margin-top: 30px;
+}
+
 * {
   margin: 0px;
   padding: 0px;
@@ -96,7 +117,7 @@ section {
   margin: 80px auto;
 }
 
-.header-content-line {
+.content-line {
   height: 5px;
   width: 150px;
   background-color: #fc036b;
