--- a/_navbar.scss
+++ b/_navbar.scss
@@ -8,10 +8,11 @@
     left: 0;
     display: flex;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     justify-content: space-between;
     padding: 20px;
-    color: var(--text-color);
+    color: $text-color;
+    
 
     .active{
         color: $primary-color;
