--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@
   left: 0;
   display: flex;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
   padding: 20px;
-  color: var(--text-color);
+  color: whitesmoke;
 }
 .navbar .active {
   color: #fc036b;
