--- a/_events.scss
+++ b/_events.scss
@@ -1,3 +1,4 @@
+@import 'colors';
 
 .events{
 
@@ -6,30 +7,33 @@
     &-title{
         text-align: center;
         font-size:4vmin;
-        color: var(--thirdy-color);
+        color: $thirdy-color;
         margin-top: 50px;
     }
 
     &-row{
       
         margin-top:50px ;
+        display: flex;
+        flex-direction: row;
         
         &-col{
             display: flex;
             flex-direction: column;
             align-items: center;
 
-        
         img{
             width: 80%;
+            border-radius: 20px;
+        }
+        p{
+            width: 80%;
+            
         }
 
         .btn{
             margin-top: 30px;
         }
-        
-        
-        
         
         }
     }
