--- a/style.css
+++ b/style.css
@@ -63,11 +63,13 @@
 .events-title {
   text-align: center;
   font-size: 4vmin;
-  color: var(--thirdy-color);
+  color: #49497e;
   margin-top: 50px;
 }
 .events-row {
   margin-top: 50px;
+  display: flex;
+  flex-direction: row;
 }
 .events-row-col {
   display: flex;
@@ -76,9 +78,95 @@
 }
 .events-row-col img {
   width: 80%;
+  border-radius: 20px;
+}
+.events-row-col p {
+  width: 80%;
 }
 .events-row-col .btn {
   margin-top: 30px;
+}
+
+.explore {
+  background-image: url(./img/bg2.png);
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+}
+.explore-content {
+  width: 50%;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.explore .btn {
+  margin-top: 50px;
+}
+.explore h1 {
+  font-size: 5vmin;
+  color: whitesmoke;
+  margin: 50px;
+}
+.explore p {
+  color: rgb(221, 221, 221);
+}
+
+.tours {
+  display: flex;
+}
+.tours-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.tours-content-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.tours-content-left h1 {
+  font-size: 5vmin;
+  color: #fc036b;
+  margin-bottom: 50px;
+}
+.tours-content-left .btn {
+  margin-top: 50px;
+}
+.tours-content-right {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.tours-content-right img {
+  width: 336px;
+  height: 290px;
+  margin: 20px;
+  border-radius: 10px;
+}
+.tours-content-right img:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+footer {
+  height: 200px;
+  width: 100%;
+  background-color: #484872;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+footer p {
+  color: whitesmoke;
+  text-align: center;
 }
 
 * {
@@ -89,7 +177,7 @@
 
 html,
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
@@ -103,7 +191,7 @@ ul {
 
 h4 {
   font-size: 4vmin;
-  color: var(--secondary-color);
+  color: #484872;
   margin: 24px auto;
 }
 
