--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,10 @@
 @import "header";
 @import "navbar";
 @import "colors";
-@import 'events';
+@import "events";
+@import "explore";
+@import "tours";
+@import "footer";
 
 
 
@@ -13,7 +16,7 @@
 
 html,
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
@@ -26,7 +29,7 @@ ul {
 
 h4 {
   font-size: 4vmin;
-  color: var(--secondary-color);
+  color: $secondary-color;
   margin: 24px auto;
 }
 
