--- a/_events.scss
+++ b/_events.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import "media-queries";
 
 .events{
 
@@ -21,6 +22,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-bottom: 20px;
 
         img{
             width: 80%;
@@ -34,7 +36,15 @@
         .btn{
             margin-top: 30px;
         }
+
+       
         
+        }
+        @include tablet{
+            display: block;
+        }
+        @include mobile{
+            display: block;
         }
     }
 }
