--- a/_navbar.scss
+++ b/_navbar.scss
@@ -4,6 +4,7 @@
 
 
 .navbar{
+    
     position: absolute;
     top: 0;
     left: 0;
@@ -11,7 +12,7 @@
     align-items: center;
     width: 100%;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 40px;
     color: $text-color;
     
     .active{
@@ -47,16 +48,42 @@
             padding: 5px;
             
         }
+        @include tablet{
+            margin: 30px auto;
+        }
+        @include mobile{
+            margin: 30px auto;
+        }
+
     }
 
     @include tablet{
         display: none;
+
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        background: var(--secondary-color);
+        transition: all .5s ease;
+        margin-top: -900px;
     }
 
     @include mobile{
         display: none;
+
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        background: var(--secondary-color);
+        transition: all .5s ease;
+        margin-top: -900px;
     }
     }
+
+
+
 
     &-menu-btn{
         display: none;
@@ -70,6 +97,13 @@
             display: block;
             width: 30px;
         }
+    }
+
+    @include tablet{
+        padding: 20px 20px;
+    }
+    @include mobile{
+        padding: 20px 20px;
     }
     
 }
