--- a/_tours.scss
+++ b/_tours.scss
@@ -56,6 +56,7 @@
                
                 
                 border-radius: 10px;
+                margin: 20px;
 
 
                 &:hover{
